--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -2,4 +2,7 @@ zh:
   activerecord:
     attributes:
       product:
+        product_taxon_id: 商品分类
+        qr_prefix: 二维码规则
+        reference_price: 建议售价
     enum:
