--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -5,3 +5,6 @@ zh:
         product_taxon_id: 商品分类
         qr_prefix: 二维码前缀
         reference_price: 建议售价
+      part_taxon:
+        min_select: 最低选择数
+        max_select: 最多选择数
