trade items with address and customs

--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -29,3 +29,9 @@ zh:
       addresses:
         index:
           title: 订货点
+    my:
+      principal_addresses:
+        index:
+          title: 我的站点
+        show:
+          title: 商品列表
