--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -1,5 +1,11 @@
 zh:
   factory:
+    products:
+      index:
+        title: 产品列表
+    product_plans:
+      index:
+        title: 产品批次
     admin:
       title: 生产管理
       products:
@@ -10,7 +16,7 @@ zh:
           title: 产品分类
       product_plans:
         index:
-          title: 生产计划
+          title: 产品批次
       parts:
         index:
           title: 配件
