--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -5,6 +5,7 @@ zh:
         product_taxon_id: 商品分类
         qr_prefix: 二维码前缀
         profit_margin: 利润率
+        product_part_taxons: 分类
       production:
         cost_price: 成本价
         profit_price: 利润
