--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -14,6 +14,7 @@ zh:
         import_price: 进货价
         profit_price: 利润
         price: 价格
+        part_taxon_id: 分类
       part_taxon:
         min_select: 最低选择数
         max_select: 最多选择数
