--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -50,12 +50,9 @@ zh:
           title: 商品列表
     panel:
       title: 产品管理
-      product_taxon_templates:
+      factory_taxons:
         index:
           title: 产品分类
-      part_taxon_templates:
-        index:
-          title: 配件分类
       providers:
         index:
           title: 指定供应商
