--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -18,6 +18,9 @@ zh:
           title: 产品管理
         part:
           title: 产品组成
+      product_parts:
+        index:
+          title: 产品组成
       product_taxons:
         index:
           title: 产品分类
