--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -21,6 +21,9 @@ zh:
       product_parts:
         index:
           title: 产品组成
+      product_part_taxons:
+        index:
+          title: 产品组成设置
       product_taxons:
         index:
           title: 产品分类
