--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -39,6 +39,8 @@ zh:
       part_taxons:
         index:
           title: 分类
+        import:
+          title: 进货
       part_providers:
         index:
           title: 供应商管理
