--- a/config/locales/zh.enum.yml
+++ b/config/locales/zh.enum.yml
@@ -1,7 +1,7 @@
 zh:
   activerecord:
     enum:
-      product_plan:
+      factory/product_plan:
         state:
           planned: 计划中
           producing: 生产中
