--- a/config/locales/en.controller.yml
+++ b/config/locales/en.controller.yml
@@ -13,6 +13,9 @@ en:
       parts:
         index:
           title: Product parts
+      part_taxons:
+        index:
+          title: Part Taxons
       produce_plans:
         index:
           title: Produce Plans
@@ -22,5 +25,8 @@ en:
       product_taxons:
         index:
           title: Product Taxon
+      product_part_taxons:
+        index:
+          title: Part Taxons
     panel:
       title: Factory Panel
