--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -9,6 +9,9 @@ zh:
     product_plans:
       index:
         title: 产品批次
+    product_taxons:
+      index:
+        title: 类别
     admin:
       title: 产品/生产
       factory_taxons:
