--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -8,6 +8,7 @@ zh:
         product_part_taxons: 分类
         min_price: 最低价
         max_price: 最高价
+        enabled: 上架
       factory/product_part_taxon:
         min_select: 最低选择数
         max_select: 最多选择数
