--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -36,7 +36,7 @@ zh:
       product_taxons:
         index:
           title: 产品分类
-      product_plans:
+      production_plans:
         index:
           title: 产品批次
       parts:
