--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -22,6 +22,9 @@ zh:
       scenes:
         index:
           title: 场景
+      produce_plans:
+        index:
+          title: 生产计划
       products:
         index:
           title: 产品
