--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -51,6 +51,7 @@ zh:
       production_items:
         index:
           title: 产品清单
+          print: 打印
       parts:
         index:
           title: 配件/零件/原料
