--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -73,6 +73,8 @@ zh:
       productions:
         index:
           title: 产品型号
+        vip:
+          title: 会员价
       provideds:
         index:
           title: 供应列表
