--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -36,6 +36,8 @@ zh:
       factory/produce_plan:
         produce_on: 生产日期
         specialty: 主推
+        book_start_at: 预定开始时间
+        book_finish_at: 预定结束时间
       factory/product_taxon:
         factory_taxon_id: 平台分类
         scene_id: 场景
