--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -12,6 +12,7 @@ zh:
         min_select: 最低选择数
         max_select: 最多选择数
       factory/production:
+        base_price: 基础价格
         cost_price: 成本价
         profit_price: 利润
         price: 售价
