--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -50,3 +50,7 @@ zh:
       factory/production_plan:
         planned_count: 计划生产数
         production_items_count: 已生产数
+      factory/part_provider:
+        provider_id: 供应商
+        verified: 已验证
+        selected: 已选择
