--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -131,12 +131,12 @@ zh:
       factory_taxons:
         index:
           title: 产品分类
+      factory_providers:
+        index:
+          title: 指定供应商
       brands:
         index:
           title: 品牌
-      providers:
-        index:
-          title: 指定供应商
       scenes:
         index:
           title: 场景
