--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -17,6 +17,7 @@ zh:
         profit_price: 调价
         price: 售价
         vip_price: 会员价
+        default: 主显产品
         enabled: 上架
         automatic: 自动上架
       factory/part:
