--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -2,6 +2,8 @@ zh:
   activerecord:
     attributes:
       factory/product:
+        brand_id: 品牌
+        serial_id: 系列
         product_taxon_id: 商品分类
         qr_prefix: 二维码前缀
         profit_margin: 利润率
