--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -58,6 +58,8 @@ zh:
         verified: 已验证
         selected: 已选择
         export_price: 出厂价
+      factory/provide:
+        provider_id: 供应商
       factory/fit:
         part_brand_id: 适配品牌
         part_serial_id: 适配型号
