--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -20,6 +20,9 @@ zh:
         title: 选择场景
     admin:
       title: 产品/生产
+      home:
+        index:
+          title: 进销存/生产
       brands:
         index:
           title: 旗下品牌
