--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -116,7 +116,10 @@ zh:
       home:
         index:
           title: 我的
-      trade_items:
+      factory_taxons:
+        index:
+          title: 进货
+      items:
         index:
           title: 订单
       carts:
