--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -133,9 +133,9 @@ zh:
           pay: 下单
       orders:
         index:
-          title: 企业订单
+          title: 采购订单
         new:
-          title: 生成订单
+          title: 下单
       payments:
         success:
           title: 你的订单已支付成功！
