--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -56,10 +56,6 @@ zh:
       product_taxons:
         index:
           title: 类别
-        import:
-          title: 进货
-        productions:
-          provide: 进货
       production_plans:
         index:
           title: 产品批次
@@ -113,9 +109,13 @@ zh:
       home:
         index:
           title: 我的
-      factory_taxons:
+      product_taxons:
         index:
           title: 进货
+        import:
+          title: 进货
+        productions:
+          provide: 进货
       provides:
         index:
           title: 供应商
