--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -56,6 +56,8 @@ zh:
       product_taxons:
         index:
           title: 类别
+        new:
+          title: 添加本店分类
       production_plans:
         index:
           title: 产品批次
