--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -19,7 +19,7 @@ zh:
       index:
         title: 选择场景
     admin:
-      title: 产品/生产
+      title: 产品
       home:
         index:
           title: 进销存/生产
