--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -7,6 +7,8 @@ zh:
       show:
         add: 加入购物车
     productions:
+      index:
+        title: 在线商城
       show:
         add: 加入购物车
     product_plans:
