--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -113,6 +113,8 @@ zh:
       home:
         index:
           title: 我的
+        organs:
+          title: 我的企业
       product_taxons:
         index:
           title: 进货
