--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -134,12 +134,6 @@ zh:
       items:
         index:
           title: 订单
-      carts:
-        index:
-          title: 交易商户
-        list:
-          title: 代下单
-          pay: 下单
       orders:
         index:
           title: 采购订单
@@ -149,6 +143,13 @@ zh:
         success:
           title: 你的订单已支付成功！
           tip: 我们会尽快处理您的订单。
+    our:
+      carts:
+        index:
+          title: 交易商户
+        list:
+          title: 代下单
+          pay: 下单
     panel:
       title: 产品管理
       home:
