--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -144,6 +144,9 @@ zh:
           title: 你的订单已支付成功！
           tip: 我们会尽快处理您的订单。
     our:
+      produce_plans:
+        overview:
+          title: 帮同事点餐
       carts:
         index:
           title: 交易商户
@@ -151,6 +154,10 @@ zh:
         members:
           title: 代下单
           pay: 下单
+    mem:
+      produce_plans:
+        overview:
+          title: 自己点餐
     panel:
       title: 产品管理
       home:
