simple admin logic

--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -48,6 +48,7 @@ zh:
         factory_taxon_id: 平台分类
         scene_id: 场景
         partial: 可作为配件
+        products_count: 产品数
       factory/part_taxon_provider:
         provider_id: 供应商
       factory/production_plan:
