the delivery logic

--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -68,6 +68,8 @@ zh:
       production_items:
         index:
           title: 产品清单
+        delivery:
+          title: 发货
         print:
           title: 打印
       parts:
