--- a/config/locales/zh.attributes.yml
+++ b/config/locales/zh.attributes.yml
@@ -50,6 +50,7 @@ zh:
         partial: 可作为配件
         products_count: 产品数
         enabled: 上架
+        nav: 单独菜单
       factory/part_taxon_provider:
         provider_id: 供应商
       factory/production_plan:
