edit primary productions

--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -60,8 +60,6 @@ zh:
           title: 类别
         new:
           title: 添加本店分类
-        productions:
-          title: 主显商品列表
       production_plans:
         index:
           title: 产品批次
@@ -89,6 +87,8 @@ zh:
       productions:
         index:
           title: 产品型号
+        taxon:
+          title: 主显商品列表
         card:
           title: 会员价
         part:
