--- a/config/locales/zh.controller.yml
+++ b/config/locales/zh.controller.yml
@@ -110,7 +110,11 @@ zh:
       trade_items:
         index:
           title: 订单明细
-          print: 打印订单
+        print:
+          title: 打印订单
+      purchase_items:
+        index:
+          title: 采购订单
       addresses:
         index:
           title: 订货点
