--- a/config/locales/en.controller.yml
+++ b/config/locales/en.controller.yml
@@ -7,6 +7,9 @@ en:
         add: Add Cart
     admin:
       title: Factory
+      brands:
+        index:
+          title: Brands
       products:
         index:
           title: Product List
@@ -32,7 +35,14 @@ en:
       product_part_taxons:
         index:
           title: Part Taxons
+      produce_on:
+        index:
+          title: Produce Histories
+      scenes:
+        index:
+          title: Scenes
     in:
+      title: Import
       provides:
         index:
           title: Providers Admin
@@ -43,6 +53,9 @@ en:
           title: Copy
         prune:
           title: Prune
+      productions:
+        index:
+          title: Buy
     panel:
       title: Factory Panel
       factory_taxons:
